# antivirus

./: .gitignore  Cargo.toml  README.md
src/: antivirus.rs  main.rs
src/antivirus/: linux.rs  macos.rs  windows.rs
