[package]
name = "antivirus"
version = "0.1.3"
edition = "2021"

# Github Repo
authors = ["Sandesh Grangdan<sandesht801@gmail.com>"]
description = "A command-line utility for scanning directories with ClamAV, updating virus definitions, and sending notifications."
repository = "https://github.com/sandeshgrangdan/antivirus"
homepage = "https://github.com/sandeshgrangdan/antivirus"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
rand = "0.8.5"
regex = "1.10.6"
tokio = {version = "1.40.0" , features = ["full"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = true
